--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,10 @@
     <title>{% block title %}{% endblock title %}</title>
   </head>
   <body>
-    {% block content %}{% endblock content %}
+    <div class="container-fluid mt-5">
+      <div class="row justify-content-md-center">
+        {% block content %}{% endblock content %}
+      </div>
+    </div>
   </body>
 </html>
