--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -10,6 +10,7 @@
     <div class="row">
       <a href="{% url 'article_create' %}">Create new article</a>
       <a href="{% url 'article_approval' %}">Approval page</a>
+      <a href="{% url 'article_edited' %}">Edited page</a>
     </div>
     <div class="row">
       {% if writers %}
