--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Add Article{% endblock title %}
+{% block title %}Login{% endblock title %}
 
 {% block content %}
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Save">
+    <input type="submit" value="Login">
   </form>
 {% endblock content %}
