--- a/blog/templates/blog/approval.html
+++ b/blog/templates/blog/approval.html
@@ -4,28 +4,33 @@
 
 {% block content %}
   <div class="col-lg-6">
-    {% if articles %}
-      <table class="table">
-        <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Title</th>
-          <th scope="col">Writer</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for article in articles %}
+    <div class="row">
+      <a href="{% url 'dashboard' %}">Back to dashboard</a>
+    </div>
+    <div class="row">
+      {% if articles %}
+        <table class="table">
+          <thead>
           <tr>
-            <th scope="row">{{ article.id }}</th>
-            <td>{{ article.title }}</td>
-            <td>{{ article.written_by }}</td>
+            <th scope="col">Id</th>
+            <th scope="col">Title</th>
+            <th scope="col">Writer</th>
           </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-    {% else %}
-      <span>No articles written yet</span>
-    {% endif %}
+          </thead>
+          <tbody>
+          {% for article in articles %}
+            <tr>
+              <th scope="row">{{ article.id }}</th>
+              <td>{{ article.title }}</td>
+              <td>{{ article.written_by }}</td>
+            </tr>
+          {% endfor %}
+          </tbody>
+        </table>
+      {% else %}
+        <span>No articles written yet</span>
+      {% endif %}
+    </div>
   </div>
 
 {% endblock content %}
