--- a/blog/templates/blog/article_form.html
+++ b/blog/templates/blog/article_form.html
@@ -3,9 +3,16 @@
 {% block title %}Add Article{% endblock title %}
 
 {% block content %}
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save">
-  </form>
+  <div class="col-lg-6">
+    <div class="row">
+      <a href="{% url 'dashboard' %}">Back to dashboard</a>
+    </div>
+    <div class="row">
+      <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Save">
+      </form>
+    </div>
+  </div>
 {% endblock content %}
