--- a/blog/templates/blog/approval.html
+++ b/blog/templates/blog/approval.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Approval page{% endblock title %}
 
 {% block content %}
   <div class="col-lg-6">
     <div class="row">
-      <a href="{% url 'dashboard' %}">Back to dashboard</a>
+      <a href="{% url 'dashboard' %}"><button type="button" class="btn btn-primary">Back to dashboard</button></a>
     </div>
     <div class="row">
       {% if articles %}
@@ -15,6 +16,9 @@
             <th scope="col">Id</th>
             <th scope="col">Title</th>
             <th scope="col">Writer</th>
+            <th scope="col">Status</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
           </tr>
           </thead>
           <tbody>
@@ -23,6 +27,15 @@
               <th scope="row">{{ article.id }}</th>
               <td>{{ article.title }}</td>
               <td>{{ article.written_by }}</td>
+              <td>
+                {% if article.status %}
+                  Approved <img src="{% static 'admin/img/icon-yes.svg' %}" alt="{{ article.status }}">
+                {% else %}
+                  Rejected <img src="{% static 'admin/img/icon-no.svg' %}" alt="{{ article.status }}">
+                {% endif %}
+              </td>
+              <td><button type="button" class="btn btn-success">Approve</button></td>
+              <td><button type="button" class="btn btn-danger">Reject</button></td>
             </tr>
           {% endfor %}
           </tbody>
