--- a/blog/templates/blog/article_form.html
+++ b/blog/templates/blog/article_form.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="col-lg-6">
     <div class="row">
-      <a href="{% url 'dashboard' %}">Back to dashboard</a>
+      <a href="{% url 'dashboard' %}"><button type="button" class="btn btn-primary">Back to dashboard</button></a>
     </div>
     <div class="row">
       <form method="post">
