--- a/blog/templates/blog/edited.html
+++ b/blog/templates/blog/edited.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="col-lg-6">
     <div class="row">
-      <a href="{% url 'dashboard' %}">Back to dashboard</a>
+      <a href="{% url 'dashboard' %}"><button type="button" class="btn btn-primary">Back to dashboard</button></a>
     </div>
     <div class="row">
       {% if articles %}
@@ -28,7 +28,7 @@
           </tbody>
         </table>
       {% else %}
-        <span>No articles written yet</span>
+        <span>No articles eddited by you yet</span>
       {% endif %}
     </div>
   </div>
