--- a/blog/templates/blog/edited.html
+++ b/blog/templates/blog/edited.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Approval page{% endblock title %}
 
@@ -15,6 +16,7 @@
             <th scope="col">Id</th>
             <th scope="col">Title</th>
             <th scope="col">Writer</th>
+            <th scope="col">Status</th>
           </tr>
           </thead>
           <tbody>
@@ -23,6 +25,13 @@
               <th scope="row">{{ article.id }}</th>
               <td>{{ article.title }}</td>
               <td>{{ article.written_by }}</td>
+              <td>
+                {% if article.status %}
+                  Approved <img src="{% static 'admin/img/icon-yes.svg' %}" alt="{{ article.status }}">
+                {% else %}
+                  Rejected <img src="{% static 'admin/img/icon-no.svg' %}" alt="{{ article.status }}">
+                {% endif %}
+              </td>
             </tr>
           {% endfor %}
           </tbody>
