--- a/blog/templates/blog/approval.html
+++ b/blog/templates/blog/approval.html
@@ -5,8 +5,10 @@
 
 {% block content %}
   <div class="col-lg-6">
-    <div class="row">
-      <a href="{% url 'dashboard' %}"><button type="button" class="btn btn-primary">Back to dashboard</button></a>
+    <div class="row my-4">
+      <a href="{% url 'dashboard' %}">
+        <button type="button" class="btn btn-primary">Back to dashboard</button>
+      </a>
     </div>
     <div class="row">
       {% if articles %}
@@ -34,8 +36,16 @@
                   Rejected <img src="{% static 'admin/img/icon-no.svg' %}" alt="{{ article.status }}">
                 {% endif %}
               </td>
-              <td><button onclick="update_article(true, '{{ article.id }}')" type="button" class="btn btn-success">Approve</button></td>
-              <td><button onclick="update_article(false, '{{ article.id }}')" type="button" class="btn btn-danger">Reject</button></td>
+              <td>
+                <button onclick="update_article(true, '{{ article.id }}')" type="button" class="btn btn-success">
+                  Approve
+                </button>
+              </td>
+              <td>
+                <button onclick="update_article(false, '{{ article.id }}')" type="button" class="btn btn-danger">
+                  Reject
+                </button>
+              </td>
             </tr>
           {% endfor %}
           </tbody>
@@ -47,32 +57,32 @@
   </div>
 
   <script>
-    function update_article(approve, pk) {
-      $.ajaxSetup({
-        beforeSend: function (xhr, settings) {
-          xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
-        }
-      });
-      $.ajax({
-        type: 'PUT',
-        url: 'article/' + pk + '/update_article/',
-        dataType: 'json',
-        data: {
-          'status': approve,
-          'edited_by': {{ request.user.writer.id }}
-        },
-      }).done(function (data, textStatus, jqXHR) {
-        alert("Success!");
-        window.location.reload();
-        console.debug(data);
-        console.debug(textStatus);
-        console.debug(jqXHR);
-      }).fail(function (jqXHR, textStatus, errorThrown) {
-        alert("Failed.");
-        console.debug(jqXHR);
-        console.debug(textStatus);
-        console.debug(errorThrown);
-      });
-    }
+      function update_article(approve, pk) {
+          $.ajaxSetup({
+              beforeSend: function (xhr, settings) {
+                  xhr.setRequestHeader('X-CSRFToken', '{{ csrf_token }}');
+              }
+          });
+          $.ajax({
+              type: 'PUT',
+              url: 'article/' + pk + '/update_article/',
+              dataType: 'json',
+              data: {
+                  'status': approve,
+                  'edited_by': {{ request.user.writer.id }}
+              },
+          }).done(function (data, textStatus, jqXHR) {
+              alert("Success!");
+              window.location.reload();
+              console.debug(data);
+              console.debug(textStatus);
+              console.debug(jqXHR);
+          }).fail(function (jqXHR, textStatus, errorThrown) {
+              alert("Failed.");
+              console.debug(jqXHR);
+              console.debug(textStatus);
+              console.debug(errorThrown);
+          });
+      }
   </script>
 {% endblock content %}
