--- a/blog/templates/blog/article_form.html
+++ b/blog/templates/blog/article_form.html
@@ -1,17 +1,28 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 
 {% block title %}Add Article{% endblock title %}
 
 {% block content %}
   <div class="col-lg-6">
-    <div class="row">
-      <a href="{% url 'dashboard' %}"><button type="button" class="btn btn-primary">Back to dashboard</button></a>
+    <div class="row my-4">
+      <a href="{% url 'dashboard' %}">
+        <button type="button" class="btn btn-primary">Back to dashboard</button>
+      </a>
     </div>
     <div class="row">
       <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
+        {% for field in form %}
+          <div class="form-group">
+            {{ field.errors }}
+            {{ field.label_tag }} {{ field|add_class:"form-control" }}
+            {% if field.help_text %}
+              <p class="help">{{ field.help_text|safe }}</p>
+            {% endif %}
+          </div>
+        {% endfor %}
+        <input class="btn btn-success" type="submit" value="Save">
       </form>
     </div>
   </div>
